--- a/index.html
+++ b/index.html
@@ -4,32 +4,26 @@
 <head>
     <meta charset="utf-8">
     <title>Sedona</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
         <!--HEADER-->
-
         <header class="page-header">
-            <a class="image" href="./index.html">
-                <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100">
+            <h1 class="visually-hidden">City of Sedona</h1>
+            <a class="header-logo" href="#">
+                <img src="img/logo.png" alt="Седона" width="138" height="70">
             </a>
 
-            <nav class="main-nav">
-                <ul>
-                    <li>
-                        <a href="#" class="btn">Информация</a>
-                    </li>
-                    <li>
-                        <a href="#" class="btn">Фото и видео</a>
-                    </li>
-
-                    <li>
-                        <a href="#" class="btn">Карта штата</a>
-                    </li>
-                    <li>
-                        <a href="#" class="btn">Гостиницы</a>
-                    </li>
+            <nav class="main-navigation">
+                <ul class="site-navigation">
+                    <li><a href="#">Информация</a></li>
+                    <li><a href="#">Фото и видео</a></li>
+                    <li><a href="#">Карта штата</a></li>
+                    <li><a href="hotels.html">Гостиницы</a></li>
                 </ul>
             </nav>
         </header>
@@ -37,91 +31,191 @@
 
         <!--CONTENT-->
         <main>
-
             <section class="info-sedona">
-                <h3>Седона - небольшой городок в Аризоне, заслуживающий большего!</h3>
-                <p>Рассмотрим 5 причин, по которым седона круче чем гранд каньон!</p>
+                <img src="img/intro.jpg" width="1200" height="510" alt="Добро пожаловать в прекрасную Седону">
+                <div class="promo-container">
+                    <h2 class="promo-title">Седона &#8212; небольшой городок в Аризоне, заслуживающий большего!</h2>
+                    <p>Рассмотрим 5 причин, по которым седона круче чем гранд каньон!</p>
+                </div>
             </section>
             <!--Вопросы по тексту, лежащем на лого-->
             <section class="main-reasons">
-                <div class="reason-item reason-item-blue"> 
-                    <h3>Настоящий городок</h3>
-                    <span>- №1-</span>
-                    <p>Седона не атракцион для туристов, там течет своя жизнь</p>
+                <h2 class="visually-hidden">Главное преимущество</h2>
+                <div class="reason-item">
+                    <h3 class="features-text-title">Настоящий городок</h3>
+                    <span>&#8212; №1 &#8212;</span>
+                    <p>Седона - не атракцион для туристов, там течет своя жизнь</p>
                 </div>
                 <div class="reason-image">
-                    <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100">
+                    <img src="img/sedona.jpg" width="800" height="256" alt="Седона">
                 </div>
             </section>
+
             <section class="features">
-                <div class="features-item features-item-home">
-                    <h3>Жилье</h3>
-                    <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-                </div>
-                <div class="features-item features-item-eate">
-                    <h3>Еда</h3>
-                    <p>Всегда заказывай фирменный бургер, вы не разочаруетесь!</p>
-                </div>
-                <div class="features-item features-item-syvin">
-                    <h3>Сувениры</h3>
-                    <p>Не только китайского, но и местного производства!</p>
-                </div>
+                <h2 class="visually-hidden">Сервис</h2>
+                <ul class="our-services-list">
+                    <li class="our-services-item">
+                        <h3 class="our-services-title">Жилье</h3>
+
+                        <p>Рекомедуем пожить в настоящем мотеле, все как в кино!</p>
+                    </li>
+
+                    <li class="our-services-item">
+                        <h3 class="our-services-title">Еда</h3>
+                        <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                    </li>
+
+                    <li class="our-services-item">
+                        <h3 class="our-services-title">Сувениры</h3>
+                        <p>Не только китайского, но и местного производства!</p>
+                    </li>
+                </ul>
             </section>
+
             <section class="main-reasons">
-                <div class="reason-item reason-item-blue">
-                    <h3>Там есть мост дьявола</h3>
-                    <span>- №2-</span>
+                <h2 class="visually-hidden">Главное преимущество №2</h2>
+                <div class="features-photo">
+                    <img src="img/brige.jpg" width="800" height="256" alt="Фото моста Дьявола">
+                </div>
+                <div class="reason-item">
+                    <h3 class="features-text-title">Там есть мост Дьявола</h3>
+                    <span>&#8212; №2 &#8212;</span>
                     <p>Да, по нему можно пройти! если конечно вы осмелитесь</p>
                 </div>
-                <div class="reason-image">
-                    <img src="http://placehold.it/150x100" alt="Седона" width="150" height="100">
-                </div>
             </section>
-            <section class="features">
-                <div class="reason-item reason-item-grey">
-                    <h3>Небольшая площадь</h3>
-                    <span>- №3-</span>
-                    <p>Все достопримеча- тельности находятся очень близко</p>
-                </div>
-                <div class="reason-item reason-item-grey">
-                    <h3>Красивая дорога</h3>
-                    <span>- №4-</span>
-                    <p>Eхать в Седону из Лас-Вегаса совсем не скучно!</p>
-                </div>
-                <div class="reason-item reason-item-grey">
-                    <h3>Мало туристов</h3>
-                    <span>- №5-</span>
-                    <p>Большинство едет в Гранд-каньон и толпится там</p>
-                </div>
+            <section class="advantages">
+                <h2 class="visually-hidden">Другие преимущества</h2>
+                <ul class="advantages-list">
+                    <li class="advantages-item">
+                        <h3>Небольшая площадь</h3>
+
+                        <p>&#8212; №3 &#8212;</p>
+
+                        <p>Все достопримечательности находятся очень близко</p>
+                    </li>
+
+                    <li class="advantages-item">
+                        <h3>Красивая дорога</h3>
+
+                        <p>&#8212; №4 &#8212;</p>
+
+                        <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                    </li>
+
+                    <li class="advantages-item">
+                        <h3>Мало туристов</h3>
+
+                        <p>&#8212; №5 &#8212;</p>
+
+                        <p>Большинство едет в Гранд Каньон и толпится там</p>
+                    </li>
+                </ul>
             </section>
             <!--map-->
-            <section class="search">
+            <section class="hotel-search">
+                <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
                 <h2>Заинтересовались?</h2>
                 <p>Укажите предполагаемые даты поездки и мы вам покажем лучшие предложения гостиниц в Седоне</p>
-                <a href="#" class="btn">Поиск гостиницы в Седоне</a>
-                <div class="map"></div>
                 <!---вставить форму поиска---->
+                <button type="button" class="button hotel-search-button">Поиск гостиницы в седоне</button>
+                <section class="search-form">
+                    <h2 class="visually-hidden">Форма поиска гостиницы в Седоне</h2>
+
+                    <form class="form-hotel-search" action="https://echo.htmlacademy.ru" method="get" name="hotel-search">
+                        <div class="form-hotel-search-item">
+                            <label for="arrival-date"> 
+                  Дата заезда:
+                </label>
+                            <input class="input-date" type="text" name="arrival-date" value="24 апреля 2017" id="arrival-date">
+                            <button type="button" class="icon-button calendar">
+                  <span class="visually-hidden">Календарь</span>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
+                </button>
+                        </div>
+
+                        <div class="form-hotel-search-item">
+                            <label for="date-of-departure">
+                  Дата выезда:
+                </label>
+                            <input class="input-date" type="text" name="date-of-departure" value="4 июля 2017" id="date-of-departure">
+                            <button type="button" class="icon-button calendar">
+                  <span class="visually-hidden">Календарь</span>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
+                </button>
+                        </div>
+
+                        <div class="form-hotel-search-item half-line">
+                            <label for="adults">
+                  Взрослые:
+                </label>
+                            <button type="button" class="icon-button minus">
+                  <span class="visually-hidden">Уменьшение количества</span>
+                </button>
+                            <input class="input-number" type="text" name="number-of-adults" id="adults" value="2">
+                            <button type="button" class="icon-button plus">
+                  <span class="visually-hidden">Увеличение количества</span>
+                </button>
+                        </div>
+
+                        <div class="form-hotel-search-item half-line">
+                            <label for="child">
+                  Дети:
+                </label>
+                            <button type="button" class="icon-button minus">
+                  <span class="visually-hidden">Уменьшение количества</span>
+                </button>
+                            <input class="input-number" type="text" name="number-of-child" id="child" value="0">
+                            <button type="button" class="icon-button plus">
+                  <span class="visually-hidden">Увеличение количества</span>
+                </button>
+                        </div>
+                        <button type="submit" class="button form-hotel-search-button">найти</button>
+                    </form>
+                </section>
             </section>
             <!--map END-->
+            <div class="map">
+                <img src="img/map.png" width="1200" height="593" alt="Как проехать в Седону">
+            </div>
         </main>
         <!--CONTENT END-->
 
         <!--FOOTER-->
         <footer class="page-footer">
-                <div class="footer-tag">
-                    #VISITSEDONA
-                </div>
+            <div class="footer-container">
+                <p class="footer-text">#VISITSEDONA</p>
                 <div class="footer-social">
-                    <a class="socil-btn socil-btn-tw" href="#" target="_blank">Твитер</a>
-                    <a class="socil-btn socil-btn-fb" href="#" target="_blank">Фейсбук</a>
-                    <a class="socil-btn socil-btn-youtub" href="#" target="_blank">Ютьюб</a>
+                    <ul>
+                        <li>
+                            <a class="social-button" href="#">
+                                <span class="visually-hidden">Twitter</span>
+                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="15" viewBox="0 0 17 15"><path fill="#FFF" d="M10.95.144c1.685-.496 2.984.27 3.577 1.179.673-.231 1.331-.481 2.011-.708a2.345 2.345 0 0 1-.857 1.768c.685.17 1.304-.491 1.304-.491-.169 1-1.006 1.788-1.563 2.024-.231 6.75-3.175 11.217-10.077 11.082h-.446c-.41 0-4.164-.46-4.898-1.887 2.271.196 3.893-.422 4.693-1.177-.96-.3-2.679-.477-2.979-2.95.349.106.564.228 1.19.119C1.705 8.247.374 7.53.448 5.33c.285.328 1.067.536 1.34.472C1.085 5.561-.182 2.442.894.85c1.818 1.854 3.735 3.606 7.152 3.773C8.254 2.33 9.183.793 10.95.144z"/></svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="social-button" href="#">
+                                <span class="visually-hidden">Facebook</span>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22"><path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/></svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="social-button" href="#">
+                                <span class="visually-hidden">Youtube</span>
+                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="16" viewBox="0 0 20 16"><path fill="#FFF" d="M17 0H3C1.35 0 0 1.35 0 3v10c0 1.65 1.35 3 3 3h14c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zM6.027 11.998V4.002L15.014 8l-8.987 3.998z"/></svg>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="footer-copyright">
-                    Website by <a href="#" target="_blank"><img src="http://placehold.it/150x100" alt="Седона" width="150" height="100"></a>
-                </div>
+                <div class="copyright">
+                    <p class="copyright-text">website by</p>
+                    <a class="logohtmlacademy" href="https://htmlacademy.ru/intensive/htmlcss">
+                        <span class="visually-hidden">html academy</span>
+                        <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="116" height="41" viewBox="0 0 108.08 36.85"><title>logo-htmlacademy-small1</title><path d="M44.61,26.88a2,2,0,0,0,.55-0.1v1.33a3.25,3.25,0,0,1-1.18.21,1.67,1.67,0,0,1-1.67-1,4.84,4.84,0,0,1-3.14,1.08c-1.51,0-2.91-.83-2.91-2.55,0-2.13,2-2.79,3.71-2.79a11.08,11.08,0,0,1,2.17.25v-0.3c0-1-.76-1.77-2.19-1.77a7.42,7.42,0,0,0-3,.64v-1.7a10.21,10.21,0,0,1,3.19-.55c2.36,0,3.81,1.12,3.81,3.65v3a0.54,0.54,0,0,0,.49.59h0.17Zm-6.44-1.13A1.35,1.35,0,0,0,39.63,27h0.11a3.39,3.39,0,0,0,2.41-1V24.58a9.72,9.72,0,0,0-1.81-.21c-1,0-2.16.33-2.16,1.38h0Zm12.36-6.11a5,5,0,0,1,2.57.64V22a4.08,4.08,0,0,0-2.3-.7,2.75,2.75,0,1,0,0,5.49,5,5,0,0,0,2.43-.64v1.71a6.27,6.27,0,0,1-2.76.57A4.21,4.21,0,0,1,46,24.51q0-.21,0-0.41a4.32,4.32,0,0,1,4.18-4.46h0.38Zm12.17,7.24a2,2,0,0,0,.55-0.1v1.33a3.25,3.25,0,0,1-1.18.21,1.67,1.67,0,0,1-1.67-1,4.84,4.84,0,0,1-3.14,1.08c-1.51,0-2.91-.83-2.91-2.55,0-2.13,2-2.79,3.71-2.79a11.08,11.08,0,0,1,2.17.25v-0.3c0-1-.76-1.77-2.19-1.77a7.42,7.42,0,0,0-3,.64v-1.7a10.21,10.21,0,0,1,3.19-.55c2.36,0,3.81,1.12,3.81,3.65v3a0.54,0.54,0,0,0,.49.59h0.17Zm-6.44-1.13A1.35,1.35,0,0,0,57.73,27h0.11a3.39,3.39,0,0,0,2.41-1V24.58a9.72,9.72,0,0,0-1.81-.21c-1.06,0-2.16.33-2.16,1.38h0ZM73,16V28.2H71.35V26.88a3.88,3.88,0,0,1-3.19,1.54,4.4,4.4,0,0,1,0-8.78,3.81,3.81,0,0,1,3,1.3V16H73Zm-4.53,5.22a2.76,2.76,0,1,0,0,5.52A2.86,2.86,0,0,0,71.15,25V23A2.91,2.91,0,0,0,68.49,21.27ZM79,19.64c3.31,0,4.46,2.68,3.92,5.09H76.7c0.21,1.5,1.67,2.11,3.19,2.11a6.11,6.11,0,0,0,2.64-.59v1.6a7.14,7.14,0,0,1-3,.57C77,28.42,74.78,27,74.78,24a4.18,4.18,0,0,1,4-4.39H79Zm0.09,1.54a2.28,2.28,0,0,0-2.44,2.1v0.06H81.3A2,2,0,0,0,79.13,21.18Zm5.73,7V19.87h1.65v1a3.81,3.81,0,0,1,2.78-1.27A2.86,2.86,0,0,1,91.89,21a4.12,4.12,0,0,1,2.91-1.33A3.06,3.06,0,0,1,98,23V28.2h-1.9V23.05a1.59,1.59,0,0,0-1.42-1.75H94.42a2.8,2.8,0,0,0-2.07,1.12V28.2h-1.9V23.05A1.59,1.59,0,0,0,89,21.31H88.8a3,3,0,0,0-2.21,1.29v5.63H84.86Zm21.31-8.33h1.9l-3.91,9.46c-0.9,2.17-2.09,2.86-3.35,2.86a4.76,4.76,0,0,1-1.1-.14V30.46a2.86,2.86,0,0,0,.85.12c0.9,0,1.58-.64,2.07-1.9l0.17-.42-4-8.4h2l2.86,6.29ZM38.73,1.46V6.22a3.81,3.81,0,0,1,2.7-1.14,3.25,3.25,0,0,1,3.44,3.4v5.15H43V8.72a1.81,1.81,0,0,0-1.61-2h-0.3a2.93,2.93,0,0,0-2.32,1.39v5.52h-1.9V1.46h1.9ZM49.94,2.31v3h3V6.91h-3v3.81c0,1.1.5,1.46,1.58,1.46a4.49,4.49,0,0,0,1.69-.33v1.6A6.8,6.8,0,0,1,51,13.8a2.55,2.55,0,0,1-2.86-2.74V6.89H46.58V5.26h1.5V2.74Zm5.4,11.31V5.28H57v1A3.81,3.81,0,0,1,59.77,5a2.86,2.86,0,0,1,2.6,1.33A4.12,4.12,0,0,1,65.28,5,3.06,3.06,0,0,1,68.44,8.4v5.21h-1.9V8.46a1.59,1.59,0,0,0-1.42-1.75H64.89a2.8,2.8,0,0,0-2.07,1.12v5.78h-1.9V8.46A1.59,1.59,0,0,0,59.5,6.71H59.27A3,3,0,0,0,57.06,8v5.63H55.34ZM71.17,1.45H73V13.6H71.17V1.45ZM14.71,0H14.55L0,1.54V28.21l14.55,8.66,14.55-8.66V1.54Zm12.5,27.1L14.55,34.64,1.9,27.12V16.18l12.59,7.5V25L5.86,19.9v1.31l8.68,5.21v1.39L5.87,22.65V24l8.68,5.21,8.75-5.24V18.31L27.2,16V27.12Zm0-12.53-3.48,2-1.6,1L14.51,13v1.31L21,18.23H21l-0.14.09-1,.54-5.37-3.2V17l4.24,2.52-1,.67-3.2-1.9v1.31l2.1,1.24L14.5,22.1,2,14.65,14.51,7.11Zm0-1.32L14.49,5.76,1.91,13.25v-10L14.56,1.92,27.21,3.25v10h0Z" transform="translate(0 -0.02)" fill="#231f20"/></svg>
+                    </a>
+                </div></div>
         </footer>
         <!--FOOTER END-->
-    </div>
+        </div>
 
 </body>
 
