--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
             <section class="main-reasons">
                 <h2 class="visually-hidden">Главное преимущество №2</h2>
-                <div class="features-photo">
+                <div class="reason-image">
                     <img src="img/brige.jpg" width="800" height="256" alt="Фото моста Дьявола">
                 </div>
                 <div class="reason-item">
