--- a/index.html
+++ b/index.html
@@ -43,92 +43,98 @@
                 </div>
             </section>
             <!--Вопросы по тексту, лежащем на лого-->
-                   <section class="features">
-          <h2 class="visually-hidden">Главное преимущество</h2>
-          <div class="features-text">
-            <h3 class="features-text-title">Настоящий городок</h3>
+            <section class="features">
+                <h2 class="visually-hidden">Главное преимущество</h2>
+                <div class="features-text">
+                    <h3 class="features-text-title">Настоящий городок</h3>
 
-            <p>&#8212; №1 &#8212;</p>
+                    <p>&#8212; №1 &#8212;</p>
 
-            <p>Седона - не атракцион для туристов, там течет своя жизнь.</p>
-          </div>
+                    <p>Седона - не атракцион для туристов, там течет своя жизнь.</p>
+                </div>
 
-          <div class="features-photo">
-            <img src="img/sedona.jpg" width="800" height="256" alt="Фото Седоны">
-          </div>
-        </section>
+                <div class="features-photo">
+                    <img src="img/sedona.jpg" width="800" height="256" alt="Фото Седоны">
+                </div>
+            </section>
 
-        <section class="our-services">
-          <h2 class="visually-hidden">Сервис</h2>       
-          <ul class="our-services-list">
-            <li class="our-services-item">
-              <h3 class="our-services-title">Жилье</h3>
+            <section class="our-services">
+                <h2 class="visually-hidden">Сервис</h2>
+                <ul class="our-services-list">
+                    <li class="our-services-item">
+                        <h3 class="our-services-title">Жилье</h3>
 
-              <p>Рекомедуем пожить в настоящем мотеле, все как в кино!</p>
-            </li>
+                        <p>Рекомедуем пожить в настоящем мотеле, все как в кино!</p>
+                    </li>
 
-            <li class="our-services-item">
-              <h3 class="our-services-title">Еда</h3>
-              <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-            </li>
+                    <li class="our-services-item">
+                        <h3 class="our-services-title">Еда</h3>
+                        <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                    </li>
 
-            <li class="our-services-item">
-              <h3 class="our-services-title">Сувениры</h3>
-              <p>Не только китайского, но и местного производства!</p>
-            </li>
-          </ul>
-        </section> <!--end .our-services-->
+                    <li class="our-services-item">
+                        <h3 class="our-services-title">Сувениры</h3>
+                        <p>Не только китайского, но и местного производства!</p>
+                    </li>
+                </ul>
+            </section>
+            <!--end .our-services-->
 
-        <section class="features">
-          <h2 class="visually-hidden">Главное преимущество №2</h2>
-          <div class="features-photo">
-            <img src="img/brige.jpg" width="800" height="256" alt="Фото моста Дьявола">
-          </div>
+            <section class="features">
+                <h2 class="visually-hidden">Главное преимущество №2</h2>
+                <div class="features-photo">
+                    <img src="img/brige.jpg" width="800" height="256" alt="Фото моста Дьявола">
+                </div>
 
-          <div class="features-text">
-            <h3 class="features-text-title">Там есть<br> мост Дьявола</h3>
+                <div class="features-text">
+                    <h3 class="features-text-title">Там есть<br> мост Дьявола</h3>
 
-            <p>&#8212; №2 &#8212;</p>
+                    <p>&#8212; №2 &#8212;</p>
 
-            <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-          </div>
-        </section>
+                    <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+                </div>
+            </section>
 
-        <section class="advantages">
-          <h2 class="visually-hidden">Другие преимущества</h2>
-          <ul class="advantages-list">
-            <li class="advantages-item">
-              <h3>Небольшая площадь</h3>
+            <section class="advantages">
+                <h2 class="visually-hidden">Другие преимущества</h2>
+                <ul class="advantages-list">
+                    <li class="advantages-item">
+                        <h3>Небольшая площадь</h3>
 
-              <p>&#8212; №3 &#8212;</p>
+                        <p>&#8212; №3 &#8212;</p>
 
-              <p>Все достопримечательности находятся очень близко</p>
-            </li>
+                        <p>Все достопримечательности находятся очень близко</p>
+                    </li>
 
-            <li class="advantages-item">
-              <h3>Красивая дорога</h3>
-            
-              <p>&#8212; №4 &#8212;</p>
+                    <li class="advantages-item">
+                        <h3>Красивая дорога</h3>
 
-              <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-            </li>
+                        <p>&#8212; №4 &#8212;</p>
 
-            <li class="advantages-item">
-              <h3>Мало туристов</h3>
-            
-              <p>&#8212; №5 &#8212;</p>
+                        <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                    </li>
 
-              <p>Большинство едет в Гранд Каньон и толпится там</p>
-            </li>
-          </ul>          
-        </section>
-            <!--map-->
+                    <li class="advantages-item">
+                        <h3>Мало туристов</h3>
+
+                        <p>&#8212; №5 &#8212;</p>
+
+                        <p>Большинство едет в Гранд Каньон и толпится там</p>
+                    </li>
+                </ul>
+            </section>
             <section class="hotel-search">
-                <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
-                <h2>Заинтересовались?</h2>
-                <p>Укажите предполагаемые даты поездки и мы вам покажем лучшие предложения гостиниц в Седоне</p>
-                <!---вставить форму поиска---->
+                <h2 class="visually-hidden">поиск гостиницы в Седоне</h2>
+
+                <p>
+                    <b> Заинтересовались?</b>
+                </p>
+
+                <p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения для гостиниц в седоне
+                </p>
+
                 <button type="button" class="button hotel-search-button">Поиск гостиницы в седоне</button>
+
                 <section class="search-form">
                     <h2 class="visually-hidden">Форма поиска гостиницы в Седоне</h2>
 
@@ -159,12 +165,14 @@
                             <label for="adults">
                   Взрослые:
                 </label>
-                            <button type="button" class="icon-button minus">
+                            <button class="icon-button minus" type="button">
                   <span class="visually-hidden">Уменьшение количества</span>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="12" height="3" viewBox="0 0 12 3"><path d="M0 0h12v3H0z"/></svg>
                 </button>
                             <input class="input-number" type="text" name="number-of-adults" id="adults" value="2">
-                            <button type="button" class="icon-button plus">
+                            <button class="icon-button plus" type="button">
                   <span class="visually-hidden">Увеличение количества</span>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11"><path d="M4 0h3v11H4z"/><path fill="#A4A4A4" d="M0 4h11v3H0z"/></svg>
                 </button>
                         </div>
 
@@ -172,22 +180,27 @@
                             <label for="child">
                   Дети:
                 </label>
-                            <button type="button" class="icon-button minus">
+                            <button class="icon-button minus" type="button">
                   <span class="visually-hidden">Уменьшение количества</span>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="12" height="3" viewBox="0 0 12 3"><path d="M0 0h12v3H0z"/></svg>
                 </button>
                             <input class="input-number" type="text" name="number-of-child" id="child" value="0">
                             <button type="button" class="icon-button plus">
                   <span class="visually-hidden">Увеличение количества</span>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11"><path d="M4 0h3v11H4z"/><path fill="#A4A4A4" d="M0 4h11v3H0z"/></svg>
                 </button>
                         </div>
-                        <button type="submit" class="button form-hotel-search-button">найти</button>
+
+                        <button class="button form-hotel-search-button" type="submit">найти</button>
                     </form>
                 </section>
             </section>
+
             <!--map END-->
-            <div class="map">
+            <div>
                 <img src="img/map.png" width="1200" height="593" alt="Как проехать в Седону">
             </div>
+
         </main>
         <!--CONTENT END-->
 
@@ -226,7 +239,7 @@
                 </div>
             </div>
         </footer>
-        <!--FOOTER END-->
+
     </div>
 
 </body>
